syntax = "proto3";

package protos.session_history;

message LapHistoryData {
    uint32 m_lapTimeInMS = 1;       // Lap time in milliseconds
    uint32 m_sector1TimeInMS = 2;   // Sector 1 time in milliseconds
    uint32 m_sector1TimeMinutes = 3; // Sector 1 whole minute part
    uint32 m_sector2TimeInMS = 4;   // Sector 2 time in milliseconds
    uint32 m_sector2TimeMinutes = 5; // Sector 2 whole minute part
    uint32 m_sector3TimeInMS = 6;   // Sector 3 time in milliseconds
    uint32 m_sector3TimeMinutes = 7; // Sector 3 whole minute part
    uint32 m_lapValidBitFlags = 8; // 0x01 bit set - lap valid, 0x02 bit set - sector 1 valid, 0x04 bit set - sector 2 valid, 0x08 bit set - sector 3 valid
}

message TyreStintHistoryData {
    uint32 m_endLap = 1;             // Lap the tyre usage ends on (255 of current tyre)
    uint32 m_tyreActualCompound = 2; // Actual tyres used by this driver
    uint32 m_tyreVisualCompound = 3; // Visual tyres used by this driver
}

message PacketSessionHistoryData {
    uint32 m_carIdx = 1;
    uint32 m_numLaps = 2;
    uint32 m_numTyreStints = 3;
    uint32 m_bestLapTimeLapNum = 4;
    uint32 m_bestSector1LapNum = 5;
    uint32 m_bestSector2LapNum = 6;
    uint32 m_bestSector3LapNum = 7;
    repeated LapHistoryData m_lapHistoryData = 8;
    repeated TyreStintHistoryData m_tyreStintsHistoryData = 9;
}